Fix file naming and paths for Vercel deployment

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="main.html" id="logo-link">
+                    <a href="index.html" id="logo-link">
                         <img src="images/logo shape.png" alt="Strive & Fit Tele Logo Shape" class="logo-shape">
                         <img src="images/logo word.svg" alt="Strive & Fit Tele" class="logo-word">
                     </a>
@@ -111,7 +111,7 @@
                     // Update logo link to maintain Arabic language when returning to homepage
                     const logoLink = document.querySelector('.logo a');
                     if (logoLink) {
-                        logoLink.href = 'main.html?lang=ARB';
+                        logoLink.href = 'index.html?lang=ARB';
                     }
                 }
             }
