添加中文语言支持和完整的多语言翻译功能

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                     </a>
                 </div>
                 <ul class="nav-links">
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#approach">Our Approach</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#testimonials">Testimonials</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#about" data-i18n="nav-about">About</a></li>
+                    <li><a href="#approach" data-i18n="nav-approach">Our Approach</a></li>
+                    <li><a href="#services" data-i18n="nav-services">Services</a></li>
+                    <li><a href="#testimonials" data-i18n="nav-testimonials">Testimonials</a></li>
+                    <li><a href="#contact" data-i18n="nav-contact">Contact</a></li>
                 </ul>
                 <div class="header-actions">
                     <div class="language-dropdown">
@@ -36,10 +36,11 @@
                         <div class="language-options">
                             <div class="language-option" data-lang="ENG">English</div>
                             <div class="language-option" data-lang="ARB">العربية</div>
+                            <div class="language-option" data-lang="ZH-CN">中文 (简体)</div>
                         </div>
                     </div>
                 </div>
-                <a href="login.html" class="cta-button">Get Started</a>
+                <a href="login.html" class="cta-button" data-i18n="get-started">Get Started</a>
                 <div class="mobile-menu-toggle">
                     <span></span>
                     <span></span>
@@ -52,9 +53,9 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Global Healthcare at Your Fingertips</h1>
-                <p>Connect with world-class doctors remotely from anywhere, anytime.</p>
-                <button class="cta-button">Schedule a Consultation</button>
+                <h1 data-i18n="hero-title">Global Healthcare at Your Fingertips</h1>
+                <p data-i18n="hero-subtitle">Connect with world-class doctors remotely from anywhere, anytime.</p>
+                <button class="cta-button" data-i18n="hero-cta">Schedule a Consultation</button>
             </div>
         </div>
     </section>
@@ -62,18 +63,18 @@
     <section id="about" class="about">
         <div class="container">
             <div class="section-header">
-                <h2>About Strive & Fit Co.</h2>
-                <p>We're bridging geographical gaps in healthcare through innovative telemedicine solutions.</p>
+                <h2 data-i18n="about-title">About Strive & Fit Co.</h2>
+                <p data-i18n="about-subtitle">We're bridging geographical gaps in healthcare through innovative telemedicine solutions.</p>
             </div>
             <div class="about-content">
                 <div class="about-image">
                     <img src="images/about.jpg" alt="Strive & Fit Co. Platform">
                 </div>
                 <div class="about-text">
-                    <h3>Our Mission</h3>
-                    <p>At Strive & Fit Co., we believe that quality healthcare should be accessible to everyone, regardless of location. Our mission is to connect patients with the best medical professionals globally through secure, reliable telemedicine technology.</p>
-                    <h3>Our Story</h3>
-                    <p>Founded by a team of healthcare professionals and technology experts, Strive & Fit Co. was born from the desire to eliminate geographical barriers to healthcare access and provide patients with more options for specialized care.</p>
+                    <h3 data-i18n="mission-title">Our Mission</h3>
+                    <p data-i18n="mission-text">At Strive & Fit Co., we believe that quality healthcare should be accessible to everyone, regardless of location. Our mission is to connect patients with the best medical professionals globally through secure, reliable telemedicine technology.</p>
+                    <h3 data-i18n="story-title">Our Story</h3>
+                    <p data-i18n="story-text">Founded by a team of healthcare professionals and technology experts, Strive & Fit Co. was born from the desire to eliminate geographical barriers to healthcare access and provide patients with more options for specialized care.</p>
                 </div>
             </div>
         </div>
@@ -82,29 +83,29 @@
     <section id="approach" class="approach">
         <div class="container">
             <div class="section-header">
-                <h2>Our Approach</h2>
-                <p>A seamless process designed to provide quality healthcare remotely</p>
+                <h2 data-i18n="approach-title">Our Approach</h2>
+                <p data-i18n="approach-subtitle">A seamless process designed to provide quality healthcare remotely</p>
             </div>
             <div class="approach-steps">
                 <div class="step">
                     <div class="step-number">01</div>
-                    <h3>Patient Registration</h3>
-                    <p>Create your secure profile with medical history and current health concerns.</p>
+                    <h3 data-i18n="step1-title">Patient Registration</h3>
+                    <p data-i18n="step1-text">Create your secure profile with medical history and current health concerns.</p>
                 </div>
                 <div class="step">
                     <div class="step-number">02</div>
-                    <h3>Doctor Matching</h3>
-                    <p>Our system matches you with specialists suited to your specific health needs.</p>
+                    <h3 data-i18n="step2-title">Doctor Matching</h3>
+                    <p data-i18n="step2-text">Our system matches you with specialists suited to your specific health needs.</p>
                 </div>
                 <div class="step">
                     <div class="step-number">03</div>
-                    <h3>Virtual Consultation</h3>
-                    <p>Connect with your doctor through our secure, high-definition video platform.</p>
+                    <h3 data-i18n="step3-title">Virtual Consultation</h3>
+                    <p data-i18n="step3-text">Connect with your doctor through our secure, high-definition video platform.</p>
                 </div>
                 <div class="step">
                     <div class="step-number">04</div>
-                    <h3>Ongoing Care</h3>
-                    <p>Receive prescriptions, follow-up appointments, and continuous support through our platform.</p>
+                    <h3 data-i18n="step4-title">Ongoing Care</h3>
+                    <p data-i18n="step4-text">Receive prescriptions, follow-up appointments, and continuous support through our platform.</p>
                 </div>
             </div>
         </div>
@@ -113,27 +114,27 @@
     <section id="services" class="services">
         <div class="container">
             <div class="section-header">
-                <h2>Our Services</h2>
-                <p>Comprehensive telemedicine solutions for global healthcare</p>
+                <h2 data-i18n="services-title">Our Services</h2>
+                <p data-i18n="services-subtitle">Comprehensive telemedicine solutions for global healthcare</p>
             </div>
             <div class="service-cards">
                 <div class="service-card">
                     <img src="images/primary care.jpg" alt="Primary Care">
-                    <h3>Primary Care</h3>
-                    <p>General consultations for common illnesses, preventive care, and health maintenance.</p>
-                    <a href="#" class="learn-more">Learn More</a>
+                    <h3 data-i18n="service1-title">Primary Care</h3>
+                    <p data-i18n="service1-text">General consultations for common illnesses, preventive care, and health maintenance.</p>
+                    <a href="#" class="learn-more" data-i18n="learn-more">Learn More</a>
                 </div>
                 <div class="service-card">
                     <img src="images/specialist consultation.jpg" alt="Specialist Consultations">
-                    <h3>Specialist Consultations</h3>
-                    <p>Connect with specialists in cardiology, dermatology, psychiatry, and more.</p>
-                    <a href="#" class="learn-more">Learn More</a>
+                    <h3 data-i18n="service2-title">Specialist Consultations</h3>
+                    <p data-i18n="service2-text">Connect with specialists in cardiology, dermatology, psychiatry, and more.</p>
+                    <a href="#" class="learn-more" data-i18n="learn-more">Learn More</a>
                 </div>
                 <div class="service-card">
                     <img src="images/second opinion.jpg" alt="Second Opinions">
-                    <h3>Second Opinions</h3>
-                    <p>Get additional expert perspectives on diagnoses and treatment plans from global specialists.</p>
-                    <a href="#" class="learn-more">Learn More</a>
+                    <h3 data-i18n="service3-title">Second Opinions</h3>
+                    <p data-i18n="service3-text">Get additional expert perspectives on diagnoses and treatment plans from global specialists.</p>
+                    <a href="#" class="learn-more" data-i18n="learn-more">Learn More</a>
                 </div>
             </div>
         </div>
@@ -142,8 +143,8 @@
     <section id="testimonials" class="testimonials">
         <div class="container">
             <div class="section-header">
-                <h2>Patient Success Stories</h2>
-                <p>Real experiences from our global patient network</p>
+                <h2 data-i18n="testimonials-title">Patient Success Stories</h2>
+                <p data-i18n="testimonials-subtitle">Real experiences from our global patient network</p>
             </div>
             <div class="testimonial-slider">
                 <div class="testimonial">
@@ -178,19 +179,19 @@
         <div class="container">
             <div class="contact-content">
                 <div class="contact-info">
-                    <h2>Ready to Access Global Healthcare?</h2>
-                    <p>Schedule a demonstration of our platform or speak with our patient care team to learn how we can connect you with world-class medical professionals.</p>
+                    <h2 data-i18n="contact-title">Ready to Access Global Healthcare?</h2>
+                    <p data-i18n="contact-text">Schedule a demonstration of our platform or speak with our patient care team to learn how we can connect you with world-class medical professionals.</p>
                     <div class="contact-details">
                         <div class="contact-item">
-                            <h4>Email</h4>
+                            <h4 data-i18n="email-label">Email</h4>
                             <p>care@striveandfit.com</p>
                         </div>
                         <div class="contact-item">
-                            <h4>Phone</h4>
+                            <h4 data-i18n="phone-label">Phone</h4>
                             <p>(555) 123-4567</p>
                         </div>
                         <div class="contact-item">
-                            <h4>Address</h4>
+                            <h4 data-i18n="address-label">Address</h4>
                             <p>123 Health Tech Plaza, Suite 200<br>San Francisco, CA 94110</p>
                         </div>
                     </div>
@@ -198,22 +199,22 @@
                 <div class="contact-form">
                     <form>
                         <div class="form-group">
-                            <label for="name">Name</label>
+                            <label for="name" data-i18n="name-label">Name</label>
                             <input type="text" id="name" name="name" required>
                         </div>
                         <div class="form-group">
-                            <label for="email">Email</label>
+                            <label for="email" data-i18n="email-label">Email</label>
                             <input type="email" id="email" name="email" required>
                         </div>
                         <div class="form-group">
-                            <label for="phone">Phone</label>
+                            <label for="phone" data-i18n="phone-label">Phone</label>
                             <input type="tel" id="phone" name="phone">
                         </div>
                         <div class="form-group">
-                            <label for="message">Message</label>
+                            <label for="message" data-i18n="message-label">Message</label>
                             <textarea id="message" name="message" rows="4" required></textarea>
                         </div>
-                        <button type="submit" class="cta-button">Send Message</button>
+                        <button type="submit" class="cta-button" data-i18n="send-message">Send Message</button>
                     </form>
                 </div>
             </div>
@@ -232,25 +233,25 @@
                 </div>
                 <div class="footer-links">
                     <div class="footer-column">
-                        <h4>Company</h4>
+                        <h4 data-i18n="company-label">Company</h4>
                         <ul>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#approach">Our Approach</a></li>
-                            <li><a href="#services">Services</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="#about" data-i18n="nav-about">About</a></li>
+                            <li><a href="#approach" data-i18n="nav-approach">Our Approach</a></li>
+                            <li><a href="#services" data-i18n="nav-services">Services</a></li>
+                            <li><a href="#contact" data-i18n="nav-contact">Contact</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
-                        <h4>Resources</h4>
+                        <h4 data-i18n="resources-label">Resources</h4>
                         <ul>
-                            <li><a href="#">Health Blog</a></li>
-                            <li><a href="#">FAQ</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Terms of Service</a></li>
+                            <li><a href="#" data-i18n="blog-link">Health Blog</a></li>
+                            <li><a href="#" data-i18n="faq-link">FAQ</a></li>
+                            <li><a href="#" data-i18n="privacy-link">Privacy Policy</a></li>
+                            <li><a href="#" data-i18n="terms-link">Terms of Service</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
-                        <h4>Connect</h4>
+                        <h4 data-i18n="connect-label">Connect</h4>
                         <div class="social-links">
                             <a href="#"><img src="images/instagram.svg" alt="Instagram"></a>
                             <a href="#"><img src="images/facebook.svg" alt="Facebook"></a>
@@ -261,11 +262,13 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 Strive & Fit Co. All rights reserved.</p>
+                <p data-i18n="copyright">&copy; 2023 Strive & Fit Co. All rights reserved.</p>
             </div>
         </div>
     </footer>
 
     <script src="script.js"></script>
+<!-- 在body结束标签前添加脚本引用 -->
+<script src="js/language-switcher.js"></script>
 </body>
 </html>
