Fix language switcher and improve login page design

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strive & Fit Tele - Global Telemedicine Solutions</title>
-    <link rel="stylesheet" href="test.css">
+    <!-- Remove test.css since it's been deleted -->
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,8 +35,8 @@
                         </div>
                         <div class="language-options">
                             <div class="language-option" data-lang="ENG">English</div>
+                            <div class="language-option" data-lang="CHN">中文</div>
                             <div class="language-option" data-lang="ARB">العربية</div>
-                            <div class="language-option" data-lang="ZH-CN">中文 (简体)</div>
                         </div>
                     </div>
                 </div>
@@ -267,8 +267,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
-<!-- 在body结束标签前添加脚本引用 -->
-<script src="js/language-switcher.js"></script>
+    <!-- Remove script.js reference and keep only language-switcher.js -->
+    <script src="js/language-switcher.js"></script>
 </body>
 </html>
