--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strive & Fit Tele - Global Telemedicine Solutions</title>
-    <!-- Remove test.css since it's been deleted -->
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -267,7 +266,29 @@
         </div>
     </footer>
 
-    <!-- Remove script.js reference and keep only language-switcher.js -->
+    <!-- At the bottom of the file, update the script section -->
     <script src="js/language-switcher.js"></script>
+    <script>
+        // Check if there's a saved language preference
+        document.addEventListener('DOMContentLoaded', function() {
+            const savedLanguage = localStorage.getItem('selectedLanguage');
+            if (savedLanguage) {
+                // Find the language option with the saved language
+                const options = document.querySelectorAll('.language-option');
+                const option = Array.from(options).find(opt => 
+                    opt.getAttribute('data-lang') === savedLanguage
+                );
+                
+                if (option) {
+                    // Manually trigger a click on that option
+                    option.click();
+                }
+            }
+            
+            // Add debug logging
+            console.log('Language initialization complete. Current language:', 
+                localStorage.getItem('selectedLanguage') || 'Default (ENG)');
+        });
+    </script>
 </body>
 </html>
