--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="login.html" class="cta-button" data-i18n="get-started">Get Started</a>
+                <a href="login.html" class="cta-button" data-i18n="start-consultation">Start Consultation</a>
                 <div class="mobile-menu-toggle">
                     <span></span>
                     <span></span>
@@ -54,7 +54,7 @@
             <div class="hero-content">
                 <h1 data-i18n="hero-title">Global Healthcare at Your Fingertips</h1>
                 <p data-i18n="hero-subtitle">Connect with world-class doctors remotely from anywhere, anytime.</p>
-                <button class="cta-button" data-i18n="hero-cta">Schedule a Consultation</button>
+                <a href="login.html" class="cta-button" data-i18n="start-consultation">Start Consultation</a>
             </div>
         </div>
     </section>
