Fix document viewer API: Replace dynamic route with simpler endpoint
- Create new /api/view-document.js endpoint
- Update frontend to use POST with documentId/version in body
- Add comprehensive debug logging
- Fix 404 routing issues with [...params] endpoint

--- a/dashboard.html
+++ b/dashboard.html
@@ -1178,10 +1178,14 @@
             });
 
             try {
-                const response = await fetch(`${API_BASE}/view-document/${docId}/${version}`, {
+                const response = await fetch(`${API_BASE}/view-document`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(userCredentials)
+                    body: JSON.stringify({
+                        ...userCredentials,
+                        documentId: docId,
+                        version: version
+                    })
                 });
                 
                 if (!response.ok) {
