--- a/dashboard.html
+++ b/dashboard.html
@@ -43,7 +43,7 @@
         .dashboard-bottom {
             flex: 1;
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             gap: 20px;
             min-height: 0;
         }
@@ -54,6 +54,8 @@
             border: 1px solid #dee2e6;
             display: flex;
             flex-direction: column;
+            width: 45%;
+            min-width: 500px;
         }
         
         .document-panel-header {
@@ -216,6 +218,22 @@
             display: flex;
             flex-direction: column;
             min-height: 0;
+            width: 55%;
+        }
+
+        /* Responsive layout for smaller screens */
+        @media (max-width: 1200px) {
+            .dashboard-bottom {
+                flex-direction: column;
+            }
+            .document-list-panel,
+            .document-viewer-panel {
+                width: 100%;
+                min-width: unset;
+            }
+            .document-list-panel {
+                max-height: 400px;
+            }
         }
         
         .dashboard-header {
@@ -1235,7 +1253,7 @@
                             console.log('Displaying as image');
                             viewer.innerHTML = `<div style="text-align: center; padding: 20px;">
                                 <img src="${data.redirectUrl}" alt="${fileName}" 
-                                     style="max-width: 100%; max-height: 80vh; height: auto; border: 1px solid #ddd; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);"
+                                     style="max-width: 100%; max-height: min(85vh, 900px); height: auto; border: 1px solid #ddd; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);"
                                      onerror="this.style.display='none'; this.nextSibling.style.display='block';">
                                 <div style="display: none; color: #666; margin-top: 10px;">
                                     <p>Image preview failed. <a href="${data.redirectUrl}" target="_blank">View original file</a></p>
@@ -1270,7 +1288,7 @@
                                         </a>
                                     </div>
                                     <iframe src="${objectUrl}" 
-                                            style="width: 100%; height: 600px; border: 1px solid #ddd; border-radius: 8px;"
+                                            style="width: 100%; height: min(85vh, 900px); border: 1px solid #ddd; border-radius: 8px;"
                                             type="application/pdf"
                                             title="PDF Preview">
                                         <p>Your browser cannot display this PDF. 
