--- a/login.html
+++ b/login.html
@@ -627,7 +627,7 @@
                 }
                 
                 try {
-                    const response = await fetch('/api/authenticate', {
+                    const response = await fetch('/api/auth', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
@@ -671,7 +671,7 @@
             // Test function for browser console
             window.testLogin = function(dob, accountNumber) {
                 console.log('Testing login with:', { dob, accountNumber });
-                fetch('/api/authenticate', {
+                fetch('/api/auth', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ dob, accountNumber })
